name:                xmonad-config
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/t#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable xmonad-config
  hs-source-dirs:      .
  main-is:             xmonad.hs
  other-modules:      Local.DockWindows
                      Local.Lifx
                      Local.Util
                      Local.Popup
                      Local.Xmobar
                      XMonad.Config.Prime.Monadic
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , xmonad
                     , xmonad-contrib
                     , bytestring
                     , data-default
                     , mtl
                     , containers
                     , aeson
                     , connection
                     , http-conduit
                     , ghc-prim
                     , process
  default-language:    Haskell2010
  ghc-options: -Wall

executable xmonadctl
  hs-source-dirs: .
  main-is: xmonadctl.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , X11
  default-language:    Haskell2010
